JEDIT 2.5 VERSION HISTORY

* Version 2.5pre2

+ Enhancements

- User input is blocked while I/O is in progress

+ Bug Fixes

- Fixed possible EmptyStackException in View.popStatus() (since 2.5pre1)
- Possible fix for IBM JDK 1.3 for Linux NPE in
  EnhancedCheckBoxMenuItem.Model.isSelected()

* Version 2.5pre1

+ New Features

- New I/O system.
  - Multithreaded - this should improve perceived performance, and you
    can abort lengthy I/O operations
  - Supports pluggable 'virtual filesystems' which can support transparent
    loading and saving of non-local files
  - The 'File', 'Url' and 'Ftp' VFS's are included with the core. More can
    be added as plugins
  - The code is still a bit rough. User input isn't blocked while saving or
    loading, and there is no way to abort a request. This will be be fixed in
    future releases.
- Undo queue size can be set
- You can now prompt the user for input in macros; try invoking
  'Macros->Prompt User for Input' while recording
- Background mode; if jEdit is started with the -background switch, it will
  not create an initial view and instead wait for client connections. Also,
  closing all views in background mode will not exit jEdit; to exit a
  backgrounded instance, invoke 'File->Exit'.

+ Enhancements

- MARK_PREVIOUS rules are now checked for after keywords
- Function calls are highlighted in C-like modes (C, C++, Java, etc)
- Sequences with a trailing 'd', 'f', or 'l' are now highlighted as digits
- Modal dialog boxes are now centered relative to the current view
- Improved backup directory feature (Richard S. Hall)
- If the pre-load checks (if the file is a directory, if the file is readable,
  etc) fail, then jEdit will no longer create an empty buffer
- jEdit now saves it's settings when the global options dialog box is closed,
  instead of waiting until you exit
- The default focus in many dialog boxes should now be set properly
- Improved key binding handling -- the text area no longer needs to have focus