@@ -1,6 +1,6 @@
 /*
  * Macros.java - Macro manager
- * Copyright (C) 1999 Slava Pestov
+ * Copyright (C) 1999, 2000 Slava Pestov
  *
  * This program is free software; you can redistribute it and/or
  * modify it under the terms of the GNU General Public License
@@ -216,7 +216,8 @@ public class Macros
 		else
 		{
 			action = line.substring(0,index);
-			actionCommand = line.substring(index + 1);
+			actionCommand = substituteRegisters(line.substring(
+				index + 1));
 		}
 
 		EditAction _action = jEdit.getAction(action);
@@ -326,6 +327,56 @@ public class Macros
 		}
 	}
 
+	private static String substituteRegisters(String actionCommand)
+	{
+		StringBuffer buf = new StringBuffer();
+		boolean backslash = false;
+		for(int i = 0; i < actionCommand.length(); i++)
+		{
+			char ch = actionCommand.charAt(i);
+			if(ch == '\\')
+			{
+				if(backslash)
+				{
+					backslash = false;
+					buf.append('\\');
+				}
+				else
+					backslash = true;
+			}
+			else if(ch == '$')
+			{
+				if(backslash || i == actionCommand.length() - 1)
+				{
+					buf.append(ch);
+					backslash = false;
+				}
+				else
+				{
+					ch = actionCommand.charAt(++i);
+					Registers.Register reg = Registers.getRegister(ch);
+					if(reg != null)
+					{
+						String str = reg.toString();
+						if(str != null)
+							buf.append(str);
+					}
+				}
+			}
+			else
+			{
+				if(backslash)
+				{
+					buf.append('\\');
+					backslash = false;
+				}
+				buf.append(ch);
+			}
+		}
+
+		return buf.toString();
+	}
+
 	static class BufferRecorder implements InputHandler.MacroRecorder
 	{
 		View view;
@@ -386,6 +437,9 @@ public class Macros
 /*
  * ChangeLog:
  * $Log$
+ * Revision 1.24  2000/05/05 11:08:26  sp
+ * Johnny Ryall
+ *
  * Revision 1.23  2000/05/04 10:37:04  sp
  * Wasting time
  *
@@ -415,14 +469,5 @@ public class Macros
  *
  * Revision 1.14  1999/11/21 01:20:30  sp
  * Bug fixes, EditBus updates, fixed some warnings generated by jikes +P
- *
- * Revision 1.13  1999/11/19 08:54:51  sp
- * EditBus integrated into the core, event system gone, bug fixes
- *
- * Revision 1.12  1999/11/16 08:21:20  sp
- * Various fixes, attempt at beefing up expand-abbrev
- *
- * Revision 1.11  1999/11/10 10:43:01  sp
- * Macros can now have shortcuts, various miscallaneous updates
  *
  */
